# certification_work

./: TERMS.md  pyproject.toml
config/: settings.py  urls.py
templates/trade_network/: dropdown_filter.html
trade_network/: apps.py  urls.py  views.py
trade_network/admin/: __init__.py  product.py  supplier.py
trade_network/migrations/: 0001_initial.py  0002_contact.py  0003_product.py  0004_auto_20240511_1745.py  0005_supplier_supplier_type.py
trade_network/models/: __init__.py  contact.py  product.py  supplier.py
trade_network/serializers/: __init__.py  contact.py  product.py  supplier.py
